added basic portfolio template

--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5720904141413722"crossorigin="anonymous"/>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Miro Kokki</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Telex&family=Workbench&display=swap" rel="stylesheet">
+</head>
+<body>
+    <h2>Hi, I'm</h2>
+    <h1>Miro Kokki</h1>
+    <h3>AKA. poopoofartnut</h3>
+    <p></p>
+</body>
+</html>
+<style>
+    body {
+        background-image: radial-gradient(circle at 1px 1px, rgb(46, 46, 46) 1px, transparent 0);
+        background-color: rgb(18, 18, 18);
+        background-size: 35px 35px;
+        font-family: "Telex", sans-serif;
+        color: white;
+        line-height: 10px;
+        margin: 0.5in;
+        overflow-x: none;
+    }
+    h3{
+        color: rgb(93, 93, 93);
+        font-size: 13pt;
+        position: relative;
+        top: -60px;
+    }
+    h2{
+        font-size: 20pt;
+    }
+    h1{
+        font-size: 60pt;
+        line-height: 50pt;
+        position: relative;
+        top: -30px;
+        left: -3px;
+    }
+</style>
